GMM_Main/src/objects/NOFA_Member__c.object
<CustomObject>
    <fields>
        <fullName>NOFA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipName>NOFA_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <formula>NOFA__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipName>NOFA_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NOFO Member</label>
    <nameField>
        <displayFormat>NOFA Member{0000}</displayFormat>
        <label>NOFO Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOFO Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Is_Fiscal_Yr_Same</fullName>
        <active>false</active>
        <errorConditionFormula>False</errorConditionFormula>
        <errorDisplayField>NOFA__c</errorDisplayField>
        <errorMessage>Fiscal Yr on Nofa group is not same as on Nofa Fiscal Yr</errorMessage>
    </validationRules>
</CustomObject>